<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edit_text_background"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:inputType="text"
        android:maxLength="32"
        android:hint="@string/product_description"
        android:background="@drawable/edit_text_round_background"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="name" />
    <EditText
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:inputType="number"
        android:paddingVertical="10dp"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        android:paddingHorizontal="5dp"
        android:background="@drawable/edit_text_round_background"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/product_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/price"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:paddingVertical="10dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:paddingHorizontal="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_round_background"
        app:layout_constraintTop_toBottomOf="@id/product_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:autofillHints="no" />

</androidx.constraintlayout.widget.ConstraintLayout>