<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/background_color"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_invoice_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:paddingVertical="10dp"
            android:text="@string/invoice_no"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_text_invoice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:autofillHints="no"
            android:background="@drawable/edit_text_background"
            android:hint="@string/invoice_no"
            android:inputType="number"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_invoice_no"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date_and_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:paddingVertical="10dp"
            android:text="@string/date_and_time"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_invoice_no" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_camera_alt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date_and_time" />

        <EditText
            android:id="@+id/tv_form"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:paddingHorizontal="16dp"
            android:paddingVertical="5dp"
            android:textSize="18sp"
            android:gravity="top"
            android:visibility="gone"
            android:hint="@string/to_receiver_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date_and_time"
            android:autofillHints="no"
            android:maxLines="8"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/spinnerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:paddingVertical="10dp"
            android:text="Choose courier partner"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:spinnerMode="dialog"
            android:dropDownSelector="@drawable/arrow_drop_down"
            android:popupBackground="@color/background_color"
            app:layout_constraintBottom_toBottomOf="@+id/spinnerLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/spinnerLabel"
            app:layout_constraintTop_toTopOf="@id/spinnerLabel" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/qty_and_price_layout"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginHorizontal="5dp"
            tools:itemCount="1"
            app:layout_constraintTop_toBottomOf="@id/spinnerLabel" />

        <Button
            android:id="@+id/button_add_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="add"
            android:textColor="@color/purple_700"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerView" />
        <Button
            android:id="@+id/btn_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Review"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/button_add_product"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>